# split-board-radar

./: .gitignore  README.md  package-lock.json  package.json
jobpipe/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
jobpipe-ui/: .env.local.example  README.md  index.html  package-lock.json  package.json
jobpipe-ui/src/: App.tsx  api.ts
jobpipe-ui/src/components/: AddCompany.tsx  MatchesView.tsx
jobpipe/config/: companies.csv  settings.yaml
jobpipe/config/candidates/: engineer.yaml.example  scientist.yaml.example
jobpipe/data/templates/: digest_email.html.j2
jobpipe/jobpipe/: __main__.py  config.py  db.py  filter.py  ingest.py  models.py  notify.py  pipeline.py  scheduler.py  server.py  tailor.py
jobpipe/jobpipe/ats/: ashby.py  base.py  greenhouse.py  lever.py  resolver.py  workday.py
jobpipe/tests/: conftest.py  test_adapters.py  test_config.py  test_filter.py  test_greenhouse.py  test_models.py  test_notify.py  test_pipeline.py  test_tailor.py
